--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "serve": "^11.3.2",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0",
@@ -16,8 +17,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack serve"
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
