--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     // "sourceMap": true, /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     //"outDir": "./dist", /* Redirect output structure to the directory. */
-    //"rootDir": "./src/", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    //"rootDir": "./dist/", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
     // "removeComments": true, /* Do not emit comments to output. */
@@ -26,7 +26,7 @@
     // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
     // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
-    "noEmitOnError": true,
+    //"noEmitOnError": true,
     /* Strict Type-Checking Options */
     "strict": true, /* Enable all strict type-checking options. */
     // "noImplicitAny": true, /* Raise error on expressions and declarations with an implied 'any' type. */
