--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sweetalert": "^2.1.2",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4"
