--- a/typescript-node/package.json
+++ b/typescript-node/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^15.3.0",
     "nodemon": "^2.0.7"
   },
